deployment/workshop.yaml

######## ws001-api #########
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws001-api
  # labels - istio 必要
  labels:
    app: ws001-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws001-api
  strategy:
    rollingUpdate:
      # maxSurge:  e.g. maxSurge: 1、replicas: 5，代表 Kubernetes 會先開好 1 個新 pod 後才刪掉一個舊的 pod，整個升級過程中最多會有 5+1 個 pod
      maxSurge: 1
      # maxUnavailable: e.g. maxUnavailable: 1，代表 Kubernetes 整個升級過程中最多會有 1 個 pod 處在無法服務的狀態
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ws001-api
    spec:
      containers:
        - name: ws001-api
          image: gcr.io/silkrode-golang/ws001-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7001
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ws001-api
spec:
  type: NodePort
  selector:
    app: ws001-api
  ports:
    # ports.name istio 必要
    - name: http
      protocol: TCP
      port: 7001
      targetPort: 7001

######## ws002-pingpong #########
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws002-pingpong
  labels:
    app: ws002-pingpong
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ws002-pingpong
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ws002-pingpong
    spec:
      containers:
        - name: ws002-pingpong
          image: gcr.io/silkrode-golang/ws002-pingpong:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7002
---
apiVersion: v1
kind: Service
metadata:
  name: ws002-pingpong
spec:
  type: NodePort
  selector:
    app: ws002-pingpong
  ports:
    - name: grpc
      protocol: TCP
      port: 7002
      targetPort: 7002
