deployment/envoyfilter.yaml


apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: custom-protocol
  namespace: istio-config # as defined in meshConfig resource.
spec:
  configPatches: # 具有匹配條件的一個或多個補丁
    - applyTo: NETWORK_FILTER
      # applyTo 指定在Envoy配置中的哪個位置應應用給定的補丁。
      #      INVALID LISTENER 將修補程序應用於偵聽器。
      #      FILTER_CHAIN 將補丁應用到過濾器鏈。
      #      NETWORK_FILTER 將補丁應用到網絡過濾器鏈，以修改現有過濾器或添加新過濾器。
      #      HTTP_FILTER 將修補程序應用於http連接管理器中的HTTP過濾器鏈，以修改現有過濾器或添加新過濾器。
      #      ROUTE_CONFIGURATION 將修補程序應用於HTTP連接管理器中的Route配置（rds輸出）。 這不適用於虛擬主機。 當前，僅允許在路由配置對像上執行MERGE操作。
      #      VIRTUAL_HOST 將修補程序應用於路由配置內的虛擬主機。
      #      HTTP_ROUTE 將修補程序應用於路由配置中匹配的虛擬主機內部的路由對象。 當前，僅允許對路線對象執行MERGE操作。 群集將修補程序應用於CDS輸出中的群集。 也用於添加新集群。

      match:
        context: SIDECAR_OUTBOUND # will match outbound listeners in all sidecars
        #        ListenerType
        #         ANY: All listeners
        #         SIDECAR_INBOUND: Inbound listener in sidecar
        #         SIDECAR_OUTBOUND: Outbound listener in sidecar
        #         GATEWAY: Gateway listener
        listener:
          # portNumber 向其發送/接收流量的 service 端口/gateway端口
          portNumber: 9307
          # filterChain 匹配偵聽器中的特定過濾器鏈。如果指定，則補丁將應用於過濾器鏈
          filterChain:
            # filter 要應用補丁的特定過濾器的名稱。將此設置為envoy.httpconnectionmanager可以添加過濾器或將修補程序應用於HTTP連接管理器。
            filter:
              name: "envoy.tcp_proxy"

      # patch: 修補程序指定應如何修改所選對象。
      patch:
        # Operation
        #        MERGE: 使用json合併語義將提供的配置與生成的配置合併。
        #        ADD: 將提供的配置添加到現有列表
        #        REMOVE: 從列表中刪除所選對象
        #        # INSERT 在命名對像數組上執行插入操作。此操作通常僅在過濾器的上下文中有用，過濾器的順序很重要
        #        INSERT_BEFORE: 在所選過濾器或子過濾器之前插入。
        #        INSERT_AFTER: 指定的過濾器將插入列表的末尾
        operation: INSERT_BEFORE
        value:
          name: "envoy.config.filter.network.custom_protocol"
          config:
            ...
    - applyTo: NETWORK_FILTER # http connection manager is a filter in Envoy
      match:
        # context omitted so that this applies to both sidecars and gateways
        listener:
          filterChain:
            filter:
              name: "envoy.http_connection_manager"
      patch:
        operation: MERGE
        value:
          typed_config:
            "@type": "type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager"
            idle_timeout: 30s
