deployment/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ares.workshop.com" # <--- 改成你的專屬 Domain e.g. ares.workshop.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
      - uri:
          prefix: /api
      route:
        - destination:
            host: ws001-api
            port:
              number: 7001
